--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     name: Build and Release for multiple platforms
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
 
     strategy:
       matrix:
@@ -24,6 +24,10 @@ jobs:
         with:
           go-version: '1.23'
 
+      - name: Install dependencies
+        run: |
+          make install-deps
+
       - name: Build for ${{ matrix.os }} on ${{ matrix.arch }}
         run: |
           if [ "${{ matrix.os }}" == "ubuntu-latest" ]; then
@@ -37,11 +41,6 @@ jobs:
 
           export GOARCH=${{ matrix.arch }}
           make build
-
-
-      - name: Install dependencies
-        run: |
-          make install-deps
 
       - name: Archive built binaries
         run: |
