--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.dll
 *.so
 *.dylib
+build/
 
 # Test binary, built with `go test -c`
 *.test
@@ -20,9 +21,6 @@ vendor/
 # Go workspace file
 go.work
 go.work.sum
-
-# env file
-.env
 
 # Game binary
 *pongo
