--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -19,9 +19,21 @@ jobs:
           go-version-file: "go.mod"
 
       - name: Build WebAssembly
+        run: make build-wasm
+
+      - name: Copy wasm_exec.js and pongo.wasm
         run: |
-          make build-wasm
           cp $(go env GOROOT)/misc/wasm/wasm_exec.js web/
+
+      - name: List files in web/ directory
+        run: ls -l web/
+
+      - name: Temporarily commit generated files
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add -f web/wasm_exec.js web/pongo.wasm
+          git commit -m "Temporary commit: Add WebAssembly files for deployment"
 
       - name: Deploy to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12
@@ -31,3 +43,6 @@ jobs:
           heroku_email: rene.epcrdz@gmail.com
           branch: master
           dontuseforce: false
+
+      - name: Clean up local commit
+        run: git reset --hard HEAD~1
