--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -23,16 +23,14 @@ jobs:
 
       - name: Copy wasm_exec.js and pongo.wasm
         run: |
-          cp $(go env GOROOT)/misc/wasm/wasm_exec.js web/
-
-      - name: List files in web/ directory
-        run: ls -l web/
+          mkdir -p web/wasm
+          cp $(go env GOROOT)/misc/wasm/wasm_exec.js web/wasm/
 
       - name: Temporarily commit generated files
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add -f web/wasm_exec.js web/pongo.wasm
+          git add -f web/
           git commit -m "Temporary commit: Add WebAssembly files for deployment"
 
       - name: Deploy to Heroku
@@ -43,6 +41,3 @@ jobs:
           heroku_email: rene.epcrdz@gmail.com
           branch: master
           dontuseforce: false
-
-      - name: Clean up local commit
-        run: git reset --hard HEAD~1
