--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -53,7 +53,7 @@ jobs:
           cache: ${{ env.GO_CACHE }}
       -
         name: Pull dependencies
-        run: make install-deps
+        run: go mod tidy
       -
         name: Unit tests
         run: make test
@@ -105,6 +105,10 @@ jobs:
           go-version-file: ${{ env.GO_VERSION_FILE }}
           check-latest: ${{ env.CHECK_LATEST }}
           cache: ${{ env.GO_CACHE }}
+      -
+        # try to install C dependencies
+        name: Pull dependencies
+        run: make install-deps
       -
         name: Build binaries
         shell: bash
