--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -36,11 +36,12 @@ jobs:
         run: |
           cp $(go env GOROOT)/misc/wasm/wasm_exec.js web/
 
-      - name: Temporarily commit generated files
+      - 
+        name: Temporarily commit generated files
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add -f web/
+          git add -f web/wasm_exec.js web/pongo.wasm
           git commit -m "Temporary commit: Add WebAssembly files for deployment"
 
       - 
